--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~38.0.8",
+    "expo": "^39.0.3",
     "expo-status-bar": "^1.0.2",
-    "react": "~16.11.0",
+    "expo-updates": "~0.3.3",
+    "react": "16.13.1",
     "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native": "0.63.2",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
